iact-check-kubernetes/iact-check-core.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iact-check-core
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iact-check-core
  template:
    metadata:
      labels:
        app: iact-check-core
    spec:
      containers:
        - name: iact-check-core
          image: mortimercold/iact-check-core:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: iact-check-core
spec:
  selector:
    app: iact-check-core
  ports:
    - port: 80
      targetPort: 9090
  type: NodePort
