iact-check-kubernetes/keycloak.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:12.0.1
          ports:
          - name: http2
            containerPort: 8080
          - name: https
            containerPort: 8443
          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
